<resources>
    <string name="app_name">Думай как Шерлок!</string>
    <string name="test_rv_item_status">Уже решено</string>
    <string name="test_rv_item_button_check">Проверить</string>
    <string name="test_rv_item_show_answer">show answer</string>
    <string name="test_rv_item_set_done">set_done</string>


    <string name="testV_dialog_description">Это тест на внимательность. Суть проста: 5 раз с периодом в 2 секунды Вам будут показываться картинки. Ваша задача - за предоставленное время досконально и в деталях запомнить их.\n После Вас будут ждать вопросы по содержанию картинок.\n</string>
    <string name="testV_dialogResult_description">Количество правильных ответов: %d</string>

    <string name="todo">TODO</string>

    <string name="testV_title">Вопрос №</string>
    <string name="testRP_button_showAnswer">Узнать ответ</string>

    <string name="main_cell_tasks">Задачи</string>
    <string name="main_cell_memory">Тест на память</string>
    <string name="main_cell_readPeople">Читаем людей</string>
    <string name="main_cell_logic">Тест на логику</string>
    <string name="main_cell_study">Пособия</string>

    <string name="move_on_task_button_setDone">Решить</string>
    <string name="move_on_task_button_showAnswer">Ответ</string>

    <string name="test_rv_item_numberOfTask">Задание №</string>

    <string name="dialog_title">Описание</string>
    <string name="dialog_button">Понятно</string>
    <string name="main_card_tasks">Детективные задачи</string>
    <string name="main_card_memory">Развитие памяти</string>
    <string name="main_card_nonVerbal">Невербалика</string>
    <string name="main_card_logic">Логические задания</string>
    <string name="main_card_study">Пособия</string>
    <string name="study_card_book">Думай как Шерлок (книга)</string>
    <string name="study_card_palaceMemory">Дворец памяти</string>
</resources>
