<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tasks.move_on_task.move_on_task_view">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/tasks_move_on_task_image"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/todo" />
            <TextView
                android:id="@+id/tasks_move_on_task_title"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="31sp"
                android:background="@drawable/tasks_move_on_task_title" />
            <TextView
                android:id="@+id/tasks_move_on_task_text"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="21sp"
                android:textColor="@android:color/black"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/tasks_move_on_task_button_setDone"
                    android:layout_margin="10dp"
                    android:textAllCaps="false"
                    android:textSize="21sp"
                    android:textColor="@android:color/black"
                    android:background="@drawable/tasks_move_on_task_buttons_selector"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/move_on_task_button_setDone"
                    tools:ignore="ButtonStyle" />
                <Button
                    android:id="@+id/tasks_move_on_task_button_showAnswer"
                    android:background="@drawable/tasks_move_on_task_buttons_selector"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="21sp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/move_on_task_button_showAnswer"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>