<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="15dp"
    android:padding="5dp">

    <TextView
        android:id="@+id/test_rv_item_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/test_rv_item_status"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="21sp"
        />
    <LinearLayout
        android:id="@+id/test_rv_item_numberOfTask_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:text="Задание №"/>
        <TextView
            android:id="@+id/test_rv_item_numberOfTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@android:color/black" />
    </LinearLayout>
    <ImageView
        android:id="@+id/test_rv_item_setDone"
        android:layout_margin="3dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_toStartOf="@id/test_rv_item_showAnswer"
        android:src="@drawable/test_rv_item_set_done"
        android:contentDescription="@string/test_rv_item_set_done" />

    <ImageView
        android:id="@+id/test_rv_item_showAnswer"
        android:layout_margin="3dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/test_rv_item_show_answer_icon"
        android:contentDescription="@string/test_rv_item_show_answer" />

    <TextView
        android:id="@+id/test_rv_item_task"
        android:background="@drawable/test_rv_item_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/test_rv_item_showAnswer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="19sp"/>

    <RadioGroup
        android:id="@+id/test_rv_item_radiogroup"
        android:visibility="gone"
        android:layout_marginTop="15dp"
        android:background="@drawable/test_rv_item_answers"
        android:layout_below="@id/test_rv_item_task"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/test_rv_item_radio_answer1"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/test_rv_item_text_answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="21sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/test_rv_item_radio_answer3"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/test_rv_item_text_answer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="21sp"

                    android:textColor="@android:color/black"/>
            </LinearLayout>
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/test_rv_item_radio_answer2"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/test_rv_item_text_answer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="21sp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/test_rv_item_radio_answer4"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/test_rv_item_text_answer4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="21sp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/test_rv_item_radio_answer5"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/test_rv_item_text_answer5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="21sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/test_rv_item_button_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/test_rv_item_button_check"
                android:text="@string/test_rv_item_button_check"
                android:textAllCaps="false"
                android:gravity="center"/>
        </LinearLayout>
        </LinearLayout>

    </RadioGroup>

</RelativeLayout>